assets/themes/restart/css/userstyle.css
div#alertJsID{
    display: none;
}

div.fixed-table-loading{
    display: none; !important;
}

.smalltext {
    font-size: 12px;
    font-weight: 300;
}

.normaltext {
    font-size: 14px;
}


.table > thead > tr > th,
.table > tbody > tr > th,
.table > tfoot > tr > th,
.table > thead > tr > td,
.table > tbody > tr > td,
.table > tfoot > tr > td {
    border-top: none;
}

tr.detail-view > td {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
}

.table > tbody > tr[id] > td {
    padding-top: 16px !important;
}

div.row {
    margin-left: 0;
    margin-right: 0;
}

a.rowTitleClass:visited {
    color: #999999 !important;
}

a.detail-icon:visited{
    color: #999999 !important;
}

@media only screen and (max-width: 480px) {

    #table {
        margin-left: -20px !important;
        margin-right: -20px !important;
    }

    #table > tbody > tr[data-index] > td.spanLink:nth-child(1) {
        padding-right: 0 !important;
        width: 65% !important;
    }

    #table > tbody > tr[data-index] > td.spanLink:nth-child(2) {
        padding-left: 0 !important;
        padding-right: 0 !important;
    }

}

/* background on the home page */
@media screen and (min-width: 768px) {
    section.call_to_action {
        background-image: url(/assets/svg/background1-15_opt.svg);
        background-size: contain;
        background-repeat: no-repeat;
    }
}

/* features on the home page */
div.homepage-f1 {
    background-image: url(/assets/svg/f_prefiltered_v2_min.svg);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    text-align: center;
}

div.homepage-f2 {
    background-image: url(/assets/svg/f_categorized_1_v2_min.svg);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    text-align: center;
}

div.homepage-f3 {
    background-image: url(/assets/svg/f_one_place_min.svg);
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    text-align: center;
}
/* Search Filters */

.search-bar {
  margin-bottom: 5px;
}
.dropdown-fields {
  padding-left: 12px;
  width: 280px;
}
.btn-group, .input-group {
  margin: 2px;
}

/* Search Filters: checkbox and radiobutton Styling */

input[type="checkbox"],
input[type="radio"] {
  pointer-events: none;
  opacity: 0;
  position: absolute;
  left: 20px;
}
input[type="checkbox"] + label,
input[type="radio"] + label {
  padding-left: 28px;
  margin: 2px 0;
}
input[type="checkbox"] + label:before {
  border-radius: 4px;
}
input[type="radio"] + label:before {
  border-radius: 50%;
}
input[type="checkbox"] + label:before,
input[type="radio"] + label:before {
  content: " ";
  position: absolute;
  height: 22px;
  width: 22px;
  left: 0;
  display: block;
  box-sizing: border-box;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, .6) inset;
  border: 1px solid transparent;
  transition-property: box-shadow;
  transition-timing-function: cubic-bezier(0,0,.2,1);
  transition-duration: 200ms;
}
input[type="checkbox"]:hover + label:before,
input[type="radio"]:hover + label:before {
  box-shadow: 0 0 0 1px rgba(0, 0, 0, .9) inset;
}
input[type="checkbox"]:checked + label:before,
input[type="radio"]:checked + label:before {
  box-shadow: 0 0 0 12px #428bca inset;
}

span#checkmark {
  position: absolute;
  width: 16px;
  font-size: 1.7em;
  overflow: hidden;
  display: block;
  background-position: 0 -24px;
  top: 6px;
  left: 3px;
}


input[type=radio]:checked+label:before {
    box-shadow: 0 0 0 6px #428bca inset,0 0 0 11px #fff inset;
}
input[type=checkbox]:focus:checked+label:before {
    box-shadow: 0 0 0 1px #428bca, 0 0 0 11px #428bca inset;
}
input[type=checkbox]:focus+label:before,
input[type=radio]:focus+label:before {
    box-shadow: 0 0 0 1px #428bca, 0 0 0 1px rgba(0,0,0,.9) inset;
}
input[type=radio]:focus:checked+label:before {
  box-shadow: 0 0 0 1px #428bca, 0 0 0 6px #428bca inset,0 0 0 11px #fff inset;
}


/* Search Filters: button styles for mobile screens */
@media (max-width: 480px) {
    .btn-div {
        width: 65%;
    }
}

@media (max-width: 410px) {
    .btn-div {
        width: 78%;
    }
    .btn-filter {
        text-align: left;
    }
}

/*
div#filter-container {
  padding-bottom: 0px;
  padding-top: 0px;
  border: 0px;
} */

/* Clear default button styles
Create custom navbar-like custom styles */
.btn-filter {
  border: 0;
  border-radius: 0;
  color: #555555;
}
.btn-filter:hover,
.btn-filter:focus,
.btn-filter:active,
.open > .dropdown-toggle.btn-filter {
  background-color: transparent;
  color: #000000;
}
.btn-filter:active {
  box-shadow: none;
}
.btn-div.open .dropdown-toggle {
  box-shadow: none;
}

/* Table styling */
td.spanLink a {
  font-size: 1.3em;
}
tr[data-index] {
  border: 1px solid #dddddd;
}
.table > tbody > tr > td {
  padding: 0;
}
.table > tbody > tr > td.spanLink {
  padding: 20px;
}
.labelTag {
    background: #ffffff;
    color: #777777;
    border: 1px solid #dddddd;
    float: left;
    font-weight: normal;
    font-size: 12px;
    margin-right: 5px;
    margin-top: 7px;
    padding: 5px;
}
td a .fa {
  padding: 24px;
}
.highlight {
    padding: 9px 14px;
    border-left: 1px solid #dddddd;
    border-right: 1px solid #dddddd;
}
.job-info {
margin: 5px 0;
}

